# openstack-orphan-finder

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  pyproject.toml  requirements.txt
src/orphan_finder/: cli.py  core.py  report.py
src/orphan_finder/resources/: floating_ips.py  loadbalancer.py  networks.py  ports.py  routers.py  security_groups.py  servers.py  subnets.py  volumes.py
src/orphan_finder/tests/: test_cli.py  test_core.py  test_delete.py  test_find.py
